2012-11-03  Clement Law  <themanifold@gmail.com>

	* src/pm3d.c src/pm3d.h src/save.c src/set.c src/show.c:
	Add rms option for 'set pm3d corners2color'.

2012-11-01  Ethan A Merritt  <merritt@u.washington.edu>

	* term/gplt_x11.c: Yet another bug fix for the new text fragment format.

	* src/qtterminal/qt_term.cpp src/qtterminal/QtGnuplotScene.cpp
	src/qtterminal/QtGnuplotWidget.cpp:  Fix mouse tracking and resize
	events for persistent qt windows.

2012-10-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/parse.c (parse_reset_after_error) src/parse.h src/util.c:
	Error exit from inside try_to_get_string() left the internal flags for
	string parsing in an incorrect state.  Provide a reset routine.

	* src/mouse.c (event_buttonrelease): Save/restore event parameters
	across the check for a user command bound to a mouse button.

2012-10-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c: Fix a coding error, (sizeof((char *)buf) rather than
	(strlen((char *)buf)), that can cause a buffer overrun on 64-bit
	machines.  Found by valgrind.

	* src/gplt_x11.c: The new read format for text fragments passed from
	x11.trm was missing a space.  Bugfix.

2012-10-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c: Save axis scaling for 3D 'set view map' plots so
	that outboard drivers can continue mousing in -persist mode.

	* term/canvas.trm term/svg.trm: Sort out the up/down polarity of
	mousing limits in 3D 'set view map' plots. Bug #3581514

	* src/term.c src/term_api.h term/xlib.trm: Remove vestigial traces
	of ipc_back_fd outside of its scope (term.c).

	* term/debug.trm: Add entry points for filled_polygon, layer,
	set_color, path, image.

	* src/term.c src/gadgets.c src/set.c term/README:  Add a default
	routine null_set_font() so that code does not have to test every
	time whether the current terminal supports term->set_font() or not.

	* src/color.c src/color.h src/eval.c src/getcolor.c src/getcolor.h
	docs/gnuplot.doc:  